# lakehouse-ufba

./: .gitignore  dvc.yaml  pyproject.toml
.dvc/: config
data/lakehouse/: .gitignore  ufba.duckdb.dvc
data/raw/academico/: .gitignore
data/raw/socioeconomico/: .gitignore
lakehouse_ufba/: params.py  utils.py
lakehouse_ufba/db/: create_tables.py  ufba_bronze.py
lakehouse_ufba/download/: download_and_extract_files.py
lakehouse_ufba/sql/: create_schemas_and_tables.py
lakehouse_ufba/ufba_bronze/: import_bronze_files.py
lakehouse_ufba/ufba_bronze/academic/: import_academic_file.py
lakehouse_ufba/ufba_bronze/socioeconomic/: import_socioeconomic_files.py
logs/: .gitignore
sql/: schemas.sql  ufba_bronze_tables.sql
